Clean code... (suite)

--- a/src/demos/content/1.html
+++ b/src/demos/content/1.html
@@ -15,15 +15,15 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <h1>Basic grid</h1>
       <p>The minimal markup required with <code>.bfg--row</code> direction.</p>
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--row">
       <div class="bfg__box"></div>
