--- a/src/demos/content/12.html
+++ b/src/demos/content/12.html
@@ -15,14 +15,14 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>This demo shows real nested grid in the same row direction.</p>
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--row">
       <div class="bfg__box bfg__box--3">
