--- a/src/demos/content/14.html
+++ b/src/demos/content/14.html
@@ -15,8 +15,8 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>When the total size of the boxes is less than <code>12</code>, you can distribute the remaining space using:
         <code>.bfg--main-center</code>, <code>.bfg--main-end</code>,
@@ -24,7 +24,7 @@
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--col bfg--main-between">
       <div class="bfg__box bfg__box--2"></div>
