--- a/src/demos/content/17.html
+++ b/src/demos/content/17.html
@@ -15,15 +15,15 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>To fix the width of a particular box in pixels, use <code>.bfg__box--fit</code> and give the box the expected <code>width</code>.<br>
         To see it in action, open on a separate tab and resize the window.</p>
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--row">
       <div class="bfg__box bfg__box--fit" style="width:150px"></div>
