--- a/src/demos/content/5.html
+++ b/src/demos/content/5.html
@@ -15,15 +15,15 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.<br>
         In this case, the boxes may extend beyond the <code>.bfg--row</code> container, causing a global vertical scrollbar to appear.</p>
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--row bfg--wrap">
       <div class="bfg__box bfg__box--6"></div>
