--- a/src/demos/content/6.html
+++ b/src/demos/content/6.html
@@ -15,20 +15,20 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.<br>
         In this case, the boxes may extend beyond the <code>.bfg--col</code> container, causing a global horizontal scrollbar to appear.</p>
 
-      <p class="final__warning">
+      <p class="demo-layout__warn">
         <strong>Note for Chrome:</strong><br>
         You have to explicitly set the <code>width</code> of the <code>.bfg__box</code>, otherwise content like text will increase indefinitely in width.
       </p>
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--col bfg--wrap">
       <div class="bfg__box bfg__box--6"></div>
