--- a/src/demos/content/9.html
+++ b/src/demos/content/9.html
@@ -15,15 +15,15 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>To always fit the main <code>.bfg</code> height, use a <code>.bfg--col</code> wrapper and a separate <code>.bfg--row</code> for each row.<br>
         This is more complex, but this way you can set a different height of each row.</p>
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--col">
       <div class="bfg__box bfg__box--3 bfg bfg--row">
