--- a/src/demos/content/16.html
+++ b/src/demos/content/16.html
@@ -15,14 +15,14 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>This demo shows nested grid in the same column direction.</p>
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--col">
       <div class="bfg__box bfg__box--4"></div>
