--- a/src/demos/content/19.html
+++ b/src/demos/content/19.html
@@ -15,8 +15,8 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
         <br>
@@ -24,7 +24,7 @@
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--row bfg--gap bfg--wrap">
       <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
