--- a/src/demos/content/21.html
+++ b/src/demos/content/21.html
@@ -15,14 +15,14 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>This demo shows mixing of nested and interlaced grids when using <code>.bfg--gap</code>.</p>
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--col bfg--gap">
       <div class="bfg__box bfg__box--6 bfg bfg--row"><!-- interlaced -->
