--- a/src/demos/content/22.html
+++ b/src/demos/content/22.html
@@ -15,15 +15,15 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>Use <code>.bfg__header</code> with <code>.bfg__content</code> to add an header.<br>
         Use <code>.bfg__action</code> with <code>.bfg__header</code> to add one or more actions.</p>
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--col bfg--gap">
       <div class="bfg__box bfg__box--3">
