--- a/src/demos/content/7.html
+++ b/src/demos/content/7.html
@@ -15,8 +15,8 @@
   <script src="../demo.ts"></script>
 </head>
 <body>
-  <div class="final__info">
-    <div class="final__desc">
+  <div class="demo-layout__desc">
+    <div class="demo-layout__readme">
 
       <p>When using <code>.bfg--wrap</code>, <code>.bfg__box</code> are displayed on multiple lines.<br>
         If you know the exact number of lines (2 in this demo), you can still fit the <code>.bfg--row</code> height using <code>.bfg--lines-2</code>.
@@ -24,7 +24,7 @@
 
     </div>
   </div>
-  <div class="final__demo">
+  <div class="demo-layout__output">
 
     <div class="bfg bfg--row bfg--wrap bfg--lines-2">
       <div class="bfg__box bfg__box--6"></div>
