--- a/src/demo.html
+++ b/src/demo.html
@@ -8,12 +8,12 @@
 
   <link rel="shortcut icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="content/demo.scss">
-  <link rel="stylesheet" href="content/www.scss">
+  <link rel="stylesheet" href="css/demo.scss">
+  <link rel="stylesheet" href="css/www.scss">
 
   <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 
-  <script src="content/demo.ts"></script>
+  <script src="script.ts"></script>
 </head>
 <body>
   <div class="www-navbar www-navbar--back">
@@ -47,28 +47,28 @@
 
   <main class="www-container">
     <div id="www-showcase">
-      <a href="content/demo/1.html"></a>
-      <a href="content/demo/2.html"></a>
-      <a href="content/demo/3.html"></a>
-      <a href="content/demo/4.html"></a>
-      <a href="content/demo/5.html"></a>
-      <a href="content/demo/6.html"></a>
-      <a href="content/demo/7.html"></a>
-      <a href="content/demo/8.html"></a>
-      <a href="content/demo/9.html"></a>
-      <a href="content/demo/10.html"></a>
-      <a href="content/demo/11.html"></a>
-      <a href="content/demo/12.html"></a>
-      <a href="content/demo/13.html"></a>
-      <a href="content/demo/14.html"></a>
-      <a href="content/demo/15.html"></a>
-      <a href="content/demo/16.html"></a>
-      <a href="content/demo/17.html"></a>
-      <a href="content/demo/18.html"></a>
-      <a href="content/demo/19.html"></a>
-      <a href="content/demo/20.html"></a>
-      <a href="content/demo/21.html"></a>
-      <a href="content/demo/22.html"></a>
+      <a href="demo/1.html"></a>
+      <a href="demo/2.html"></a>
+      <a href="demo/3.html"></a>
+      <a href="demo/4.html"></a>
+      <a href="demo/5.html"></a>
+      <a href="demo/6.html"></a>
+      <a href="demo/7.html"></a>
+      <a href="demo/8.html"></a>
+      <a href="demo/9.html"></a>
+      <a href="demo/10.html"></a>
+      <a href="demo/11.html"></a>
+      <a href="demo/12.html"></a>
+      <a href="demo/13.html"></a>
+      <a href="demo/14.html"></a>
+      <a href="demo/15.html"></a>
+      <a href="demo/16.html"></a>
+      <a href="demo/17.html"></a>
+      <a href="demo/18.html"></a>
+      <a href="demo/19.html"></a>
+      <a href="demo/20.html"></a>
+      <a href="demo/21.html"></a>
+      <a href="demo/22.html"></a>
     </div>
   </main>
 
