--- a/src/demo/4.html
+++ b/src/demo/4.html
@@ -6,25 +6,25 @@
 
   <title>Bem Flex Grid</title>
 
-  <link rel="stylesheet" href="../../../node_modules/prismjs/themes/prism.css">
+  <link rel="stylesheet" href="../../node_modules/prismjs/themes/prism.css">
 
-  <link rel="shortcut icon" href="../../favicon.ico">
-  <link rel="stylesheet" href="../demo.scss">
-  <link rel="stylesheet" href="../../lib/bem-flex-grid.ie11.scss">
+  <link rel="shortcut icon" href="../favicon.ico">
+  <link rel="stylesheet" href="../css/demo.scss">
+  <link rel="stylesheet" href="../lib/bem-flex-grid.ie11.scss">
 
-  <script src="../demo.ts"></script>
+  <script src="../script.ts"></script>
 </head>
 <body>
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>By default, <code>.bfg__box</code> are displayed on one line and can NOT leave outside the <code>.bfg--row</code> container.</p>
+      <p>By default, <code>.bfg__box</code> are displayed on one line and can NOT leave outside the <code>.bfg--col</code> container.</p>
 
     </div>
   </div>
   <div class="demo-layout__output">
 
-    <div class="bfg bfg--row">
+    <div class="bfg bfg--col">
       <div class="bfg__box bfg__box--2"></div>
       <div class="bfg__box bfg__box--4"></div>
       <div class="bfg__box bfg__box--6"></div>
