--- a/src/demo/15.html
+++ b/src/demo/15.html
@@ -6,27 +6,27 @@
 
   <title>Bem Flex Grid</title>
 
-  <link rel="stylesheet" href="../../../node_modules/prismjs/themes/prism.css">
+  <link rel="stylesheet" href="../../node_modules/prismjs/themes/prism.css">
 
-  <link rel="shortcut icon" href="../../favicon.ico">
-  <link rel="stylesheet" href="../demo.scss">
-  <link rel="stylesheet" href="../../lib/bem-flex-grid.ie11.scss">
+  <link rel="shortcut icon" href="../favicon.ico">
+  <link rel="stylesheet" href="../css/demo.scss">
+  <link rel="stylesheet" href="../lib/bem-flex-grid.ie11.scss">
 
-  <script src="../demo.ts"></script>
+  <script src="../script.ts"></script>
 </head>
 <body>
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>This demo shows nested grid in the same column direction.</p>
+      <p>This demo shows nested grid in the same row direction.</p>
 
     </div>
   </div>
   <div class="demo-layout__output">
 
-    <div class="bfg bfg--col">
+    <div class="bfg bfg--row">
       <div class="bfg__box bfg__box--4"></div>
-      <div class="bfg__box bfg__box--4 bfg bfg--col">
+      <div class="bfg__box bfg__box--4 bfg bfg--row">
 
         <div class="bfg__box bfg__box--6"></div>
         <div class="bfg__box bfg__box--6"></div>
