--- a/src/demo/20.html
+++ b/src/demo/20.html
@@ -6,13 +6,13 @@
 
   <title>Bem Flex Grid</title>
 
-  <link rel="stylesheet" href="../../../node_modules/prismjs/themes/prism.css">
+  <link rel="stylesheet" href="../../node_modules/prismjs/themes/prism.css">
 
-  <link rel="shortcut icon" href="../../favicon.ico">
-  <link rel="stylesheet" href="../demo.scss">
-  <link rel="stylesheet" href="../../lib/bem-flex-grid.ie11.scss">
+  <link rel="shortcut icon" href="../favicon.ico">
+  <link rel="stylesheet" href="../css/demo.scss">
+  <link rel="stylesheet" href="../lib/bem-flex-grid.ie11.scss">
 
-  <script src="../demo.ts"></script>
+  <script src="../script.ts"></script>
 </head>
 <body>
   <div class="demo-layout__desc">
