--- a/src/demo.html
+++ b/src/demo.html
@@ -46,7 +46,7 @@
   </header>
 
   <main class="www-container">
-    <div id="www-showcase">
+    <div class="www-showcase">
       <a href="demo/1.html"></a>
       <a href="demo/2.html"></a>
       <a href="demo/3.html"></a>
