Rename some folders

--- a/src/demo/19.html
+++ b/src/demo/19.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../../node_modules/prismjs/themes/prism.css">
 
   <link rel="shortcut icon" href="../favicon.ico">
-  <link rel="stylesheet" href="../css/demo.scss">
+  <link rel="stylesheet" href="../styles/demo.scss">
   <link rel="stylesheet" href="../lib/bem-flex-grid.ie11.scss">
 
   <script src="../script.ts"></script>
@@ -24,7 +24,7 @@
 
     </div>
   </div>
-  <div class="demo-layout__output">
+  <pre class="demo-layout__output">
 
     <div class="bfg bfg--row bfg--gap bfg--wrap">
       <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
@@ -48,7 +48,7 @@
       <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
     </div>
 
-  </div>
+  </pre>
 
   <script>Demo.viewCode(); Demo.fullScreenSwitcher();</script>
 </body>
