--- a/src/demo/22.html
+++ b/src/demo/22.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../../node_modules/prismjs/themes/prism.css">
 
   <link rel="shortcut icon" href="../favicon.ico">
-  <link rel="stylesheet" href="../css/demo.scss">
+  <link rel="stylesheet" href="../styles/demo.scss">
   <link rel="stylesheet" href="22.scss">
 
   <script src="../script.ts"></script>
@@ -23,7 +23,7 @@
 
     </div>
   </div>
-  <div class="demo-layout__output">
+  <pre class="demo-layout__output">
 
     <div class="bfg bfg--col bfg--gap">
       <div class="bfg__box bfg__box--3">
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-  </div>
+  </pre>
 
   <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.fullScreenSwitcher();</script>
 </body>
