--- a/src/demo.html
+++ b/src/demo.html
@@ -8,8 +8,8 @@
 
   <link rel="shortcut icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="css/demo.scss">
-  <link rel="stylesheet" href="css/www.scss">
+  <link rel="stylesheet" href="styles/demo.scss">
+  <link rel="stylesheet" href="styles/www.scss">
 
   <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 
