--- a/src/demo/5.html
+++ b/src/demo/5.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../../node_modules/prismjs/themes/prism.css">
 
   <link rel="shortcut icon" href="../favicon.ico">
-  <link rel="stylesheet" href="../css/demo.scss">
+  <link rel="stylesheet" href="../styles/demo.scss">
   <link rel="stylesheet" href="../lib/bem-flex-grid.ie11.scss">
 
   <script src="../script.ts"></script>
@@ -23,7 +23,7 @@
 
     </div>
   </div>
-  <div class="demo-layout__output">
+  <pre class="demo-layout__output">
 
     <div class="bfg bfg--row bfg--wrap">
       <div class="bfg__box bfg__box--6"></div>
@@ -31,7 +31,7 @@
       <div class="bfg__box bfg__box--12"></div>
     </div>
 
-  </div>
+  </pre>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
 </body>
