--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
     <script src="../node_modules/prismjs/components/prism-scss.min.js"></script>
     <script src="../node_modules/prismjs/components/prism-bash.min.js"></script>
 
-    <link rel="stylesheet" href="css/demo.scss">
-    <link rel="stylesheet" href="css/www.scss">
+    <link rel="stylesheet" href="styles/demo.scss">
+    <link rel="stylesheet" href="styles/www.scss">
     <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 
     <style>
