--- a/src/demo/17.html
+++ b/src/demo/17.html
@@ -23,7 +23,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output">
+  <pre class="demo-layout__output"><div class="demo-layout__source">
 
     <div class="bfg bfg--row">
       <div class="bfg__box bfg__box--fit" style="width:150px"></div>
@@ -31,8 +31,8 @@
       <div class="bfg__box bfg__box--8"></div>
     </div>
 
-  </pre>
+  </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
