--- a/src/demo/19.html
+++ b/src/demo/19.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="demo-page-bg--gray">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output">
+  <pre class="demo-layout__output demo-layout__output--gray"><div class="demo-layout__source">
 
     <div class="bfg bfg--row bfg--gap bfg--wrap">
       <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
@@ -48,8 +48,8 @@
       <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
     </div>
 
-  </pre>
+  </div></pre>
 
-  <script>Demo.viewCode(); Demo.fullScreenSwitcher();</script>
+  <script>Demo.viewCode(); Demo.enableActions();</script>
 </body>
 </html>
