--- a/src/demo/4.html
+++ b/src/demo/4.html
@@ -22,7 +22,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output">
+  <pre class="demo-layout__output"><div class="demo-layout__source">
 
     <div class="bfg bfg--col">
       <div class="bfg__box bfg__box--2"></div>
@@ -30,8 +30,8 @@
       <div class="bfg__box bfg__box--6"></div>
     </div>
 
-  </pre>
+  </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
