--- a/src/demo/1.html
+++ b/src/demo/1.html
@@ -23,14 +23,14 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output">
+  <pre class="demo-layout__output"><div class="demo-layout__source">
 
     <div class="bfg bfg--row">
       <div class="bfg__box"></div>
     </div>
 
-  </pre>
+  </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
