--- a/src/demo/2.html
+++ b/src/demo/2.html
@@ -22,14 +22,14 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output">
+  <pre class="demo-layout__output"><div class="demo-layout__source">
 
     <div class="bfg bfg--col">
       <div class="bfg__box"></div>
     </div>
 
-  </pre>
+  </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
