--- a/src/demo/21.html
+++ b/src/demo/21.html
@@ -22,7 +22,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output">
+  <pre class="demo-layout__output"><div class="demo-layout__source">
 
     <div class="bfg bfg--col bfg--gap">
       <div class="bfg__box bfg__box--6 bfg bfg--row"><!-- interlaced -->
@@ -65,8 +65,8 @@
       </div>
     </div>
 
-  </pre>
+  </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
