--- a/src/demo/22.html
+++ b/src/demo/22.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="demo-page-bg--gray">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output">
+  <pre class="demo-layout__output demo-layout__output--gray"><div class="demo-layout__source">
 
     <div class="bfg bfg--col bfg--gap">
       <div class="bfg__box bfg__box--3">
@@ -58,8 +58,8 @@
       </div>
     </div>
 
-  </pre>
+  </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.fullScreenSwitcher();</script>
+  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.enableActions();</script>
 </body>
 </html>
