--- a/src/demo/7.html
+++ b/src/demo/7.html
@@ -24,7 +24,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output">
+  <pre class="demo-layout__output"><div class="demo-layout__source">
 
     <div class="bfg bfg--row bfg--wrap bfg--lines-2">
       <div class="bfg__box bfg__box--6"></div>
@@ -32,8 +32,8 @@
       <div class="bfg__box bfg__box--12"></div>
     </div>
 
-  </pre>
+  </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.fullScreenSwitcher();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
