--- a/src/demo.html
+++ b/src/demo.html
@@ -72,6 +72,10 @@
     </div>
   </main>
 
+  <footer class="www-footer">
+    Powered with <b>&hearts;</b> by Avine.
+  </footer>
+
   <script>Demo.showcase();</script>
 </body>
 </html>
