--- a/src/index.html
+++ b/src/index.html
@@ -603,5 +603,9 @@ npm start
 
 
     </main>
+
+    <footer class="www-footer">
+      Powered with <b>&hearts;</b> by Avine.
+    </footer>
 </body>
 </html>
