--- a/src/index.html
+++ b/src/index.html
@@ -267,7 +267,7 @@ Then you can choose the distribution mode of the remaining space.</p>
   &lt;div class=&quot;bfg__box bfg__box--6 bfg__box--first&quot;&gt;&lt;/div&gt;
 ...
 </code></pre>
-<p>As the grid is responsive, you can change the box order at each breakpoint.</p>
+<p>As the grid is responsive, you can change the <code>.bfg__box</code> element order at each breakpoint.</p>
 <h3>.bfg__box--fit</h3>
 <p>Use <code>.bfg__box--fit</code> modifier to indicate that a <code>.bfg__box</code> element should not grow or shrink.</p>
 <p>Here's an example when using <code>.bfg--row</code> modifier:</p>
