--- a/src/demo/11.html
+++ b/src/demo/11.html
@@ -18,32 +18,38 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>This demo shows real nested grid in the same row direction.</p>
+      <p>There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
+        <br>
+        In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--light</code> to fill the boxes content.</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output demo-layout__output--gray"><div class="demo-layout__source">
 
-    <div class="bfg bfg--col">
-      <div class="bfg__box bfg__box--3">
+    <div class="bfg bfg--row bfg--gap bfg--wrap">
+      <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
 
-        <div class="bfg bfg--row">
-          <div class="bfg__box bfg__box--6"></div>
-          <div class="bfg__box bfg__box--6"></div>
-        </div>
+      <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--light"></div></div>
 
-      </div>
-      <div class="bfg__box bfg__box--9">
+      <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--light"></div></div>
 
-        <div class="bfg bfg--row">
-          <div class="bfg__box bfg__box--12"></div>
-        </div>
+      <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--light"></div></div>
 
-      </div>
+      <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--light"></div></div>
+
+      <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--light"></div></div>
+
+      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
     </div>
 
   </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.enableActions();</script>
 </body>
 </html>
