--- a/src/demo/13.html
+++ b/src/demo/13.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../styles/demo.scss">
-  <link rel="stylesheet" href="../lib/bem-flex-grid.ie11.scss">
+  <link rel="stylesheet" href="13.scss">
 
   <script src="../script.ts"></script>
 </head>
@@ -18,23 +18,48 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>When the total size of the boxes is less than <code>12</code>, you can distribute the remaining space using:
-        <code>.bfg--main-center</code>, <code>.bfg--main-end</code>,
-        <code>.bfg--main-between</code> or <code>.bfg--main-around</code>.</p>
+      <p>Use <code>.bfg__header</code> with <code>.bfg__content</code> to add an header.<br>
+        Use <code>.bfg__action</code> with <code>.bfg__header</code> to add one or more actions.</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output demo-layout__output--gray"><div class="demo-layout__source">
 
-    <div class="bfg bfg--row bfg--main-between">
-      <div class="bfg__box bfg__box--2"></div>
-      <div class="bfg__box bfg__box--fit"><i>Fixed box</i></div>
-      <div class="bfg__box bfg__box--fit"><i>Fixed box</i></div>
-      <div class="bfg__box bfg__box--4"></div>
+    <div class="bfg bfg--col bfg--gap">
+      <div class="bfg__box bfg__box--3">
+        <!-- content with header -->
+        <header class="bfg__header bfg__header--error">Header</header>
+        <div class="bfg__content bfg__content--error"></div>
+      </div>
+
+      <div class="bfg__box bfg__box--6 bfg bfg--row">
+        <div class="bfg__box bfg__box--3">
+          <!-- content with header and actions -->
+          <div class="bfg__action bfg__action--light"><a href="#action-2">Action 2</a></div>
+          <div class="bfg__action bfg__action--light"><a href="#action-1">Action 1</a></div>
+          <header class="bfg__header bfg__header--light">Very very very long Header</header>
+          <div class="bfg__content bfg__content--light"></div>
+        </div>
+
+        <div class="bfg__box bfg__box--6">
+          <!-- content without header -->
+          <div class="bfg__content bfg__content--light"></div>
+        </div>
+
+        <div class="bfg__box bfg__box--3">
+          <header class="bfg__header bfg__header--info">Header</header>
+          <div class="bfg__content bfg__content--info"></div>
+        </div>
+      </div>
+
+      <div class="bfg__box bfg__box--3">
+        <header class="bfg__header bfg__header--warning">Header</header>
+        <div class="bfg__content bfg__content--warning"></div>
+      </div>
     </div>
 
   </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.enableActions();</script>
 </body>
 </html>
