--- a/src/demo/2.html
+++ b/src/demo/2.html
@@ -18,14 +18,16 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>The minimal markup required with <code>.bfg--col</code> direction.</p>
+      <p>By default, <code>.bfg__box</code> are displayed on one line and can NOT leave outside the <code>.bfg--row</code> container.</p>
 
     </div>
   </div>
   <pre class="demo-layout__output"><div class="demo-layout__source">
 
-    <div class="bfg bfg--col">
-      <div class="bfg__box"></div>
+    <div class="bfg bfg--row">
+      <div class="bfg__box bfg__box--2"></div>
+      <div class="bfg__box bfg__box--4"></div>
+      <div class="bfg__box bfg__box--6"></div>
     </div>
 
   </div></pre>
