--- a/src/demo/8.html
+++ b/src/demo/8.html
@@ -18,18 +18,21 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>When using <code>.bfg--wrap</code>, <code>.bfg__box</code> are displayed on multiple lines.<br>
-        If you know the exact number of lines (2 in this demo), you can still fit the <code>.bfg--col</code> width using <code>.bfg--lines-2</code>.
-        In this case, all the columns will have the same width.</p>
+      <p>This demo shows nested grid in the same row direction.</p>
 
     </div>
   </div>
   <pre class="demo-layout__output"><div class="demo-layout__source">
 
-    <div class="bfg bfg--col bfg--wrap bfg--lines-2">
-      <div class="bfg__box bfg__box--6"></div>
-      <div class="bfg__box bfg__box--6"></div>
-      <div class="bfg__box bfg__box--12"></div>
+    <div class="bfg bfg--row">
+      <div class="bfg__box bfg__box--4"></div>
+      <div class="bfg__box bfg__box--4 bfg bfg--row">
+
+        <div class="bfg__box bfg__box--6"></div>
+        <div class="bfg__box bfg__box--6"></div>
+
+      </div>
+      <div class="bfg__box bfg__box--4"></div>
     </div>
 
   </div></pre>
