Refactoring `enable-actions.ts`

--- a/src/demo.html
+++ b/src/demo.html
@@ -64,7 +64,7 @@
   </main>
 
   <footer class="www-footer">
-    Powered with <b>&hearts;</b> by Avine.
+    Made with <b>&hearts;</b> by Avine.
   </footer>
 
   <script>Demo.showcase();</script>
