--- a/src/index.html
+++ b/src/index.html
@@ -605,7 +605,7 @@ npm start
     </main>
 
     <footer class="www-footer">
-      Powered with <b>&hearts;</b> by Avine.
+      Made with <b>&hearts;</b> by Avine.
     </footer>
 </body>
 </html>
