--- a/src/demo/10.html
+++ b/src/demo/10.html
@@ -33,6 +33,6 @@
 
   </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions('direction');</script>
 </body>
 </html>
