Improve demo `x.html`

--- a/src/demo/1.html
+++ b/src/demo/1.html
@@ -18,8 +18,8 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Basic grid</h1>
-      <p>The minimal markup required with <code>.bfg--row</code> direction.</p>
+      <h1>Simple grid</h1>
+      <p>The minimal markup.</p>
 
     </div>
   </div>
