--- a/src/demo/10.html
+++ b/src/demo/10.html
@@ -18,8 +18,11 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>To fix the height of a particular box in pixels, use <code>.bfg__box--fit</code> and give the box the expected <code>height</code>.<br>
-        To see it in action, open on a separate tab and resize the window.</p>
+      <h1>Box fitting</h1>
+
+      <p>To fix the height of a particular box in pixels, use <code>.bfg__box--fit</code> modifier and give the box the expected <code>height</code>.</p>
+
+      <p>To see it in action, resize the window.</p>
 
     </div>
   </div>
