--- a/src/demo/11.html
+++ b/src/demo/11.html
@@ -18,9 +18,11 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
-        <br>
-        In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--light</code> to fill the boxes content.</p>
+      <h1>Boxe size</h1>
+
+      <p>There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.</p>
+
+      <p>In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--light</code> to fill the boxes content.</p>
 
     </div>
   </div>
