--- a/src/demo/13.html
+++ b/src/demo/13.html
@@ -18,6 +18,8 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
+      <h1>Header, content and actions</h1>
+
       <p>Use <code>.bfg__header</code> with <code>.bfg__content</code> to add an header.<br>
         Use <code>.bfg__action</code> with <code>.bfg__header</code> to add one or more actions.</p>
 
