--- a/src/demo/2.html
+++ b/src/demo/2.html
@@ -18,7 +18,8 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>By default, <code>.bfg__box</code> are displayed on one line and can NOT leave outside the <code>.bfg--row</code> container.</p>
+      <h1>One line</h1>
+      <p>By default, <code>.bfg__box</code> elements are displayed on one line and can NOT leave outside the <code>.bfg</code> block.</p>
 
     </div>
   </div>
