--- a/src/demo/3.html
+++ b/src/demo/3.html
@@ -18,19 +18,21 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.<br>
-        In this case, the boxes may extend beyond the <code>.bfg--col</code> container, causing a global horizontal scrollbar to appear.</p>
+      <h1>Multiple lines</h1>
+
+      <p>When using <code>.bfg--wrap</code> modifier, <code>.bfg__box</code> elements can be displayed on multiple lines.<br>
+        In this case, the boxes may leave outside the <code>.bfg</code> block, and scrollbar may appear at the parent node of the grid.</p>
 
       <p class="demo-layout__warn">
         <strong>Note for Chrome:</strong><br>
-        You have to explicitly set the <code>width</code> of the <code>.bfg__box</code>, otherwise content like text will increase indefinitely in width.
+        When using <code>.bfg--col</code> modifier, you have to explicitly set the <code>width</code> of the <code>.bfg__box</code> elements, otherwise content like text will increase indefinitely in width.
       </p>
 
     </div>
   </div>
   <pre class="demo-layout__output"><div class="demo-layout__source">
 
-    <div class="bfg bfg--col bfg--wrap">
+    <div class="bfg bfg--row bfg--wrap">
       <div class="bfg__box bfg__box--6"></div>
       <div class="bfg__box bfg__box--6"></div>
       <div class="bfg__box bfg__box--12"></div>
