--- a/src/demo/5.html
+++ b/src/demo/5.html
@@ -18,8 +18,11 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>To always fit the main <code>.bfg</code> height, use a <code>.bfg--col</code> wrapper and a separate <code>.bfg--row</code> for each row.<br>
-        This is more complex, but this way you can set a different height of each row.</p>
+      <h1>Multiple lines without scroll using "chained" grids</h1>
+
+      <p>To always fit the global <code>.bfg</code> size, use (for example) an outer <code>.bfg--col</code> and a separate inner <code>.bfg--row</code> for each row.</p>
+
+      <p>This is more complex, but this way you can set a different height of each row.</p>
 
     </div>
   </div>
