--- a/src/demo/6.html
+++ b/src/demo/6.html
@@ -18,7 +18,11 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>This demo shows real nested grid in the same row direction.</p>
+      <h1>Multiple lines without scroll using "nested" grids</h1>
+
+      <p>Chained grids is preferable but eventually not always possible.</p>
+
+      <p>Alternatively, you can use nested grids to achieve the same result as demo 5.</p>
 
     </div>
   </div>
