--- a/src/demo/12.html
+++ b/src/demo/12.html
@@ -18,7 +18,9 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>This demo shows mixing of nested and interlaced grids when using <code>.bfg--gap</code>.</p>
+      <h1>Mixing chained and nested grids</h1>
+
+      <p>If you use <code>.bfg--gap</code> modifier, you need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> element of the nested grid.</p>
 
     </div>
   </div>
