--- a/src/demo/4.html
+++ b/src/demo/4.html
@@ -18,9 +18,12 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>When using <code>.bfg--wrap</code>, <code>.bfg__box</code> are displayed on multiple lines.<br>
-        If you know the exact number of lines (2 in this demo), you can still fit the <code>.bfg--row</code> height using <code>.bfg--lines-2</code>.
-        In this case, all the rows will have the same height.</p>
+      <h1>Multiple lines without scroll using "wrap"</h1>
+
+      <p>As said above, when using <code>.bfg--wrap</code> modifier, <code>.bfg__box</code> are displayed on multiple lines.<br>
+        If you know the exact number of lines (2 in this demo), you can still fit the <code>.bfg</code> size using <code>.bfg--lines-2</code>.</p>
+
+      <p>In this case, all the rows will have the same height.</p>
 
     </div>
   </div>
