--- a/src/demo/9.html
+++ b/src/demo/9.html
@@ -18,15 +18,18 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <p>To fix the width of a particular box in pixels, use <code>.bfg__box--fit</code> and give the box the expected <code>width</code>.<br>
-        To see it in action, open on a separate tab and resize the window.</p>
+      <h1>Box fitting</h1>
+
+      <p>To fix the width of a particular box in pixels, use <code>.bfg__box--fit</code> modifier and give the box the expected <code>width</code>.</p>
+
+      <p>To see it in action, resize the window.</p>
 
     </div>
   </div>
   <pre class="demo-layout__output"><div class="demo-layout__source">
 
     <div class="bfg bfg--row">
-      <div class="bfg__box bfg__box--fit" style="width:150px"></div>
+      <div class="bfg__box bfg__box--fit" style="width:150px"><i>Fit</i></div>
       <div class="bfg__box bfg__box--4"></div>
       <div class="bfg__box bfg__box--8"></div>
     </div>
