--- a/src/demo/1.html
+++ b/src/demo/1.html
@@ -23,13 +23,16 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
 
-    <div class="bfg bfg--row">
-      <div class="bfg__box"></div>
+  <pre class="demo-layout__output">
+    <div class="demo-layout__playground">
+
+      <div class="bfg bfg--row">
+        <div class="bfg__box"></div>
+      </div>
+
     </div>
-
-  </div></pre>
+  </pre>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
