--- a/src/demo/10.html
+++ b/src/demo/10.html
@@ -26,7 +26,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output"><div class="demo-layout__playground">
 
     <div class="bfg bfg--col">
       <div class="bfg__box bfg__box--fit" style="height:150px"></div>
@@ -36,6 +36,6 @@
 
   </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions('direction');</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight']);</script>
 </body>
 </html>
