--- a/src/demo/11.html
+++ b/src/demo/11.html
@@ -26,7 +26,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output demo-layout__output--gray"><div class="demo-layout__source">
+  <pre class="demo-layout__output demo-layout__output--gray"><div class="demo-layout__playground">
 
     <div class="bfg bfg--row bfg--gap bfg--wrap">
       <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
