--- a/src/demo/12.html
+++ b/src/demo/12.html
@@ -24,7 +24,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output"><div class="demo-layout__playground">
 
     <div class="bfg bfg--col bfg--gap">
       <div class="bfg__box bfg__box--6 bfg bfg--row"><!-- interlaced -->
