--- a/src/demo/13.html
+++ b/src/demo/13.html
@@ -25,7 +25,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output demo-layout__output--gray"><div class="demo-layout__source">
+  <pre class="demo-layout__output demo-layout__output--gray"><div class="demo-layout__playground">
 
     <div class="bfg bfg--col bfg--gap">
       <div class="bfg__box bfg__box--3">
