--- a/src/demo/2.html
+++ b/src/demo/2.html
@@ -23,7 +23,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output"><div class="demo-layout__playground">
 
     <div class="bfg bfg--row">
       <div class="bfg__box bfg__box--2"></div>
