--- a/src/demo/4.html
+++ b/src/demo/4.html
@@ -27,7 +27,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output"><div class="demo-layout__playground">
 
     <div class="bfg bfg--row bfg--wrap bfg--lines-2">
       <div class="bfg__box bfg__box--6"></div>
