--- a/src/demo/5.html
+++ b/src/demo/5.html
@@ -26,7 +26,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output"><div class="demo-layout__playground">
 
     <div class="bfg bfg--col">
       <div class="bfg__box bfg__box--3 bfg bfg--row">
