--- a/src/demo/9.html
+++ b/src/demo/9.html
@@ -26,7 +26,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output"><div class="demo-layout__playground">
 
     <div class="bfg bfg--row">
       <div class="bfg__box bfg__box--fit" style="width:150px"><i>Fit</i></div>
@@ -36,6 +36,6 @@
 
   </div></pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions('direction');</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight']);</script>
 </body>
 </html>
