--- a/src/demo/3.html
+++ b/src/demo/3.html
@@ -30,7 +30,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output"><div class="demo-layout__playground">
 
     <div class="bfg bfg--row bfg--wrap">
       <div class="bfg__box bfg__box--6"></div>
