--- a/src/demo/8.html
+++ b/src/demo/8.html
@@ -28,7 +28,7 @@
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__source">
+  <pre class="demo-layout__output"><div class="demo-layout__playground">
 
     <div class="bfg bfg--row bfg--main-between">
       <div class="bfg__box bfg__box--2"></div>
